--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,1 +1,6 @@
-<%= @tasks %>
+<h1>All Tasks</h1>
+
+<% @tasks.each do |task| %>
+    <h3><%= task.title %></h3>
+    <p><%= task.description %></p>
+  <% end %>
