Add delete button, destroy method

--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -4,4 +4,10 @@
   <% task = TaskPresenter.new(t) %>
   <h3><%= task.formatted_title %></h3>
   <p><%= task.description %></p>
+  <a href="/tasks/<%= t.id  %>/edit">Edit</a>
+  <form action="/tasks/<%= t.id %>" method="POST">
+    <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="delete"/>
+  </form>
 <% end %>
